Ensure navigation doesn't hide content (see #1)
... at least on larger screens. This closes #6

Squashed commit of the following:

commit 0843bc3a4d8fe675a73bbd5bed63a3f8611a2566
Author: Markus Lanthaler <mark_lanthaler@gmx.net>
Date:   Tue Jul 1 17:50:11 2014 +0200

    Minor tweak

commit 8054e42a749350196c0a9a55e302be58fa2cffc4
Author: Chris Chapman <chris@pentandra.com>
Date:   Tue Jun 24 14:57:43 2014 -0600

    Move the .content-head rule down to be with similar selectors

commit cd29d0c778aaf62939d9dda23c51123f75385fb3
Author: Chris Chapman <chris@pentandra.com>
Date:   Tue Jun 24 14:50:29 2014 -0600

    Quick fix for issue #1.

    Only works for larger screens. It would probably be better to wait for the rest
    of the responsive disign (especially the top menu) to get it working for small
    screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,11 @@ label {
     color: #383838;
 }
 
+[id] {
+    padding-top: 7em;
+    margin-top: -7em;
+}
+
 .pure-img-responsive {
     max-width: 100%;
     height: auto;
@@ -151,6 +156,11 @@ label {
     letter-spacing: 0.1em;
     margin: 1em 0 1em;
     line-height: 1.4em;
+}
+
+.content-head[id] {
+    padding-top: 7em;
+    margin-top: -6em;
 }
 
 /* This is the class used for the content sub-headers (<h3>) */
